[project]
name = "pdf-to-md-converter"
version = "0.1.0"
description = "Скрипт конвертации PDF-файлов в Markdown с использованием langchain-docling"
requires-python = ">=3.12"
dependencies = [
    "langchain-docling",
    "langchain-huggingface",
    "langchain-chroma",
    "langchain-qdrant",
    "ftfy",
    "sentence-transformers",
    "protobuf>=3.20,<4.0",
]

[project.optional-dependencies]
cpu = ["torch==2.6.0", "torchvision==0.21.0", "onnxruntime"]
gpu = ["torch==2.6.0", "torchvision==0.21.0", "onnxruntime-gpu"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]
override-dependencies = ["torch==2.6.0", "torchvision==0.21.0"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "gpu" },
]
