[project]
name = "pdf-to-md-converter"
version = "0.1.0"
description = "Скрипт конвертации PDF-файлов в Markdown с использованием langchain-docling"
requires-python = ">=3.12"
dependencies = [
    "langchain-docling",
    "langchain-huggingface",
    "langchain-chroma",
    "langchain-qdrant",
    "ftfy",
    "sentence-transformers",
    "protobuf>=3.20,<4.0",
    "aiogram",
    "python-dotenv",
    "langchain-openai",
    "langchain-ollama",
]

[project.optional-dependencies]
cpu = ["torch==2.6.0", "torchvision==0.21.0", "onnxruntime"]
gpu = ["torch==2.6.0", "torchvision==0.21.0", "onnxruntime-gpu"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]
override-dependencies = ["torch==2.6.0", "torchvision==0.21.0"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "gpu" },
]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
exclude = [
    ".venv",
    "source",
    ".cache",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",
    "EXE",
    "F",
    "W",
    "C",
    "N",
    "A",
    "B",
    "BLE",
    "COM",
    "C4",
    "Q",
    "PIE",
    "PYI",
    "YTT",
    "ARG",
    "T10",
    "T20",
    "PTH",
    "G",
    "EM",
    "ISC",
    "RUF",
    "UP",
    "PL",
    "PLE",
    "PLR",
    "PLW",
    "I",
]
ignore = [
    "A005",
    "BLE001",
    "PLC0415",
    "PLW2901",
    "RUF001",
    "RUF012",
    "RUF022",
    "UP006",
    "UP017",
    "T20",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.pylint]
max-args = 6
